src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClassSubject__c</fullName>
        <label>Class Subject</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClassTopic__c</fullName>
        <globalPicklist>ClassTopic</globalPicklist>
        <label>Class Topic</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MAth_CLass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MAth CLass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ClassNameFormat</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(Name, &quot;[A-Z]{3}[0-9]{3}&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please enter a class name with the format of XXX000. For example. History 100 should be entered as HIS100.</errorMessage>
    </validationRules>
</CustomObject>